--- a/source/third_iteration/springcloud/search2/src/main/resources/application.yml
+++ b/source/third_iteration/springcloud/search2/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8404
+  port: 8401
 spring:
   application:
-    name: search2
+    name: article-search
 eureka:
   instance:
     prefer-ip-address: true #注册是服务使用IP地址
   client:
     service-url:
-#      defaultZone: http://localhost:8500/eureka/
+#            defaultZone: http://localhost:8500/eureka/
       defaultZone: http://ali.sxptx.cn:8001/eureka/
